--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -638,7 +638,7 @@
                             <i class="fas fa-tools"></i> Pro Tools
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ url_for('pro_tools.price_alerts') }}"><i class="fas fa-bell"></i> Prisalarmer</a></li>
+                            <!-- Prisalarmer removed from Pro Tools, merged with Varsler under Konto -->
                             <li><a class="dropdown-item" href="{{ url_for('features.analyst_recommendations') }}"><i class="fas fa-users"></i> Analytiker Anbefalinger</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Avanserte Verktøy</h6></li>
@@ -661,7 +661,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('portfolio.stock_tips') }}"><i class="fas fa-lightbulb"></i> Aksjetips</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('portfolio.advanced') }}"><i class="fas fa-cogs"></i> Avansert portfolio</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}"><i class="fas fa-robot"></i> ML Analytics</a></li>
+                            <!-- ML Analytics removed as requested -->
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
